--- a/RomanNumeralsKata.ipynb
+++ b/RomanNumeralsKata.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8lQFIzhx0W3CZxJ7gPp2+",
+      "authorship_tag": "ABX9TyPYmUIXnEKJCDkaJRHy736i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,7 +16,30 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "a535d3e088784d7097126e10e6675621": {
+        "8b64adf2087147c99916593ef6717daf": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "VBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [
+              "widget-interact"
+            ],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "VBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "VBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_29d2e90603f1473e896e75cdc449518e",
+              "IPY_MODEL_23eaa7873bc242c59267965dfd06e643"
+            ],
+            "layout": "IPY_MODEL_cb4cb275d2be433f8f6168e9e3550c70"
+          }
+        },
+        "29d2e90603f1473e896e75cdc449518e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "IntSliderModel",
           "model_module_version": "1.5.0",
@@ -33,18 +56,44 @@
             "description": "Número:",
             "description_tooltip": null,
             "disabled": false,
-            "layout": "IPY_MODEL_367b745425f745c99a9e86da32db9aee",
+            "layout": "IPY_MODEL_8844d98a5dcb4be98179e8ea5d237681",
             "max": 3999,
             "min": 1,
             "orientation": "horizontal",
             "readout": true,
             "readout_format": "d",
             "step": 1,
-            "style": "IPY_MODEL_888b7a187c3b4d5894045d03bcf91cae",
+            "style": "IPY_MODEL_56c3da7e2a3b413faa45fbe07a1e5c9d",
             "value": 1
           }
         },
-        "367b745425f745c99a9e86da32db9aee": {
+        "23eaa7873bc242c59267965dfd06e643": {
+          "model_module": "@jupyter-widgets/output",
+          "model_name": "OutputModel",
+          "model_module_version": "1.0.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/output",
+            "_model_module_version": "1.0.0",
+            "_model_name": "OutputModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/output",
+            "_view_module_version": "1.0.0",
+            "_view_name": "OutputView",
+            "layout": "IPY_MODEL_48b21321e1d44c13a6372ade24b77ffa",
+            "msg_id": "",
+            "outputs": [
+              {
+                "output_type": "stream",
+                "name": "stdout",
+                "text": [
+                  "1 → I\n"
+                ]
+              }
+            ]
+          }
+        },
+        "cb4cb275d2be433f8f6168e9e3550c70": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -96,7 +145,59 @@
             "width": null
           }
         },
-        "888b7a187c3b4d5894045d03bcf91cae": {
+        "8844d98a5dcb4be98179e8ea5d237681": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "56c3da7e2a3b413faa45fbe07a1e5c9d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "SliderStyleModel",
           "model_module_version": "1.5.0",
@@ -108,32 +209,11 @@
             "_view_module": "@jupyter-widgets/base",
             "_view_module_version": "1.2.0",
             "_view_name": "StyleView",
-            "description_width": "initial",
+            "description_width": "",
             "handle_color": null
           }
         },
-        "e313ceb5dd5c4b8b98fc48f9e7feea29": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_63c4255716174102936c22bd68e344e7",
-            "placeholder": "​",
-            "style": "IPY_MODEL_e91fafd143c04872ae43c805bca1ec2f",
-            "value": "🇮🇹 Algarismo romano: **I**"
-          }
-        },
-        "63c4255716174102936c22bd68e344e7": {
+        "48b21321e1d44c13a6372ade24b77ffa": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -183,21 +263,6 @@
             "top": null,
             "visibility": null,
             "width": null
-          }
-        },
-        "e91fafd143c04872ae43c805bca1ec2f": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
           }
         }
       }
@@ -216,22 +281,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 201,
+          "height": 258,
           "referenced_widgets": [
-            "a535d3e088784d7097126e10e6675621",
-            "367b745425f745c99a9e86da32db9aee",
-            "888b7a187c3b4d5894045d03bcf91cae",
-            "e313ceb5dd5c4b8b98fc48f9e7feea29",
-            "63c4255716174102936c22bd68e344e7",
-            "e91fafd143c04872ae43c805bca1ec2f"
+            "8b64adf2087147c99916593ef6717daf",
+            "29d2e90603f1473e896e75cdc449518e",
+            "23eaa7873bc242c59267965dfd06e643",
+            "cb4cb275d2be433f8f6168e9e3550c70",
+            "8844d98a5dcb4be98179e8ea5d237681",
+            "56c3da7e2a3b413faa45fbe07a1e5c9d",
+            "48b21321e1d44c13a6372ade24b77ffa"
           ]
         },
         "id": "KVRPg986o_gX",
-        "outputId": "253f3275-a5bf-479f-ebac-e1067e6cf4f0"
+        "outputId": "99ba71d7-f030-437c-fb37-04f50d8e0172"
       },
       "outputs": [
         {
@@ -240,7 +306,7 @@
           "text": [
             "..\n",
             "----------------------------------------------------------------------\n",
-            "Ran 2 tests in 0.002s\n",
+            "Ran 2 tests in 0.001s\n",
             "\n",
             "OK\n"
           ]
@@ -249,75 +315,70 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Executando testes...\n",
-            "🔢 Use o controle deslizante abaixo para converter números:\n"
+            "✅ Rodando testes...\n"
           ]
         },
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "IntSlider(value=1, description='Número:', max=3999, min=1, style=SliderStyle(description_width='initial'))"
+              "interactive(children=(IntSlider(value=1, description='Número:', max=3999, min=1), Output()), _dom_classes=('wi…"
             ],
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "a535d3e088784d7097126e10e6675621"
+              "model_id": "8b64adf2087147c99916593ef6717daf"
             }
           },
           "metadata": {}
         },
         {
-          "output_type": "display_data",
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "HTML(value='')"
+              "<function __main__.mostrar_romano(n)>"
             ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "e313ceb5dd5c4b8b98fc48f9e7feea29"
-            }
+            "text/html": [
+              "<div style=\"max-width:800px; border: 1px solid var(--colab-border-color);\"><style>\n",
+              "      pre.function-repr-contents {\n",
+              "        overflow-x: auto;\n",
+              "        padding: 8px 12px;\n",
+              "        max-height: 500px;\n",
+              "      }\n",
+              "\n",
+              "      pre.function-repr-contents.function-repr-contents-collapsed {\n",
+              "        cursor: pointer;\n",
+              "        max-height: 100px;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <pre style=\"white-space: initial; background:\n",
+              "         var(--colab-secondary-surface-color); padding: 8px 12px;\n",
+              "         border-bottom: 1px solid var(--colab-border-color);\"><b>mostrar_romano</b><br/>def mostrar_romano(n)</pre><pre class=\"function-repr-contents function-repr-contents-collapsed\" style=\"\"><a class=\"filepath\" style=\"display:none\" href=\"#\">/content/&lt;ipython-input-9-1764891338&gt;</a>&lt;no docstring&gt;</pre></div>"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "execution_count": 9
         }
       ],
       "source": [
-        "\n",
         "!pip install ipywidgets --quiet\n",
         "\n",
-        "import unittest\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display\n",
-        "\n",
-        "# Função principal\n",
-        "def convert(number):\n",
-        "    val_map = [\n",
-        "        (1000, \"M\"),\n",
-        "        (900,  \"CM\"),\n",
-        "        (500,  \"D\"),\n",
-        "        (400,  \"CD\"),\n",
-        "        (100,  \"C\"),\n",
-        "        (90,   \"XC\"),\n",
-        "        (50,   \"L\"),\n",
-        "        (40,   \"XL\"),\n",
-        "        (10,   \"X\"),\n",
-        "        (9,    \"IX\"),\n",
-        "        (5,    \"V\"),\n",
-        "        (4,    \"IV\"),\n",
-        "        (1,    \"I\")\n",
+        "def convert(n):\n",
+        "    mapa = [\n",
+        "        (1000, \"M\"), (900, \"CM\"), (500, \"D\"), (400, \"CD\"),\n",
+        "        (100, \"C\"), (90, \"XC\"), (50, \"L\"), (40, \"XL\"),\n",
+        "        (10, \"X\"), (9, \"IX\"), (5, \"V\"), (4, \"IV\"), (1, \"I\")\n",
         "    ]\n",
+        "    res = \"\"\n",
+        "    for val, rom in mapa:\n",
+        "        res += rom * (n // val)\n",
+        "        n %= val\n",
+        "    return res\n",
         "\n",
-        "    result = \"\"\n",
-        "    for val, sym in val_map:\n",
-        "        while number >= val:\n",
-        "            result += sym\n",
-        "            number -= val\n",
-        "    return result\n",
+        "import unittest\n",
         "\n",
-        "# Testes TDD\n",
-        "class TestRomanConverter(unittest.TestCase):\n",
-        "    def test_single_digits(self):\n",
+        "class TesteRomanos(unittest.TestCase):\n",
+        "    def test_basicos(self):\n",
         "        self.assertEqual(convert(1), \"I\")\n",
         "        self.assertEqual(convert(2), \"II\")\n",
         "        self.assertEqual(convert(3), \"III\")\n",
@@ -325,41 +386,30 @@
         "        self.assertEqual(convert(5), \"V\")\n",
         "        self.assertEqual(convert(9), \"IX\")\n",
         "\n",
-        "    def test_tens_and_others(self):\n",
+        "    def test_medios(self):\n",
         "        self.assertEqual(convert(21), \"XXI\")\n",
         "        self.assertEqual(convert(50), \"L\")\n",
         "        self.assertEqual(convert(100), \"C\")\n",
         "        self.assertEqual(convert(500), \"D\")\n",
         "        self.assertEqual(convert(1000), \"M\")\n",
-        "        self.assertEqual(convert(3999), \"MMMCMXCIX\")  # Teste extra\n",
+        "        self.assertEqual(convert(3999), \"MMMCMXCIX\")\n",
         "\n",
-        "# Rodar os testes no Colab\n",
-        "print(\"✅ Executando testes...\")\n",
-        "unittest.TextTestRunner().run(unittest.defaultTestLoader.loadTestsFromTestCase(TestRomanConverter))\n",
+        "# Rodar testes\n",
+        "print(\"✅ Rodando testes...\")\n",
+        "unittest.TextTestRunner().run(unittest.defaultTestLoader.loadTestsFromTestCase(TesteRomanos))\n",
         "\n",
         "# Interface interativa\n",
-        "def on_value_change(change):\n",
-        "    number = change['new']\n",
-        "    if number < 1 or number > 3999:\n",
-        "        output.value = \"Número fora do intervalo (1–3999)\"\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display\n",
+        "\n",
+        "def mostrar_romano(n):\n",
+        "    if 1 <= n <= 3999:\n",
+        "        print(f\"{n} → {convert(n)}\")\n",
         "    else:\n",
-        "        output.value = f\"🇮🇹 Algarismo romano: **{convert(number)}**\"\n",
+        "        print(\"Número fora do intervalo (1–3999)\")\n",
         "\n",
-        "input_number = widgets.IntSlider(\n",
-        "    value=1,\n",
-        "    min=1,\n",
-        "    max=3999,\n",
-        "    step=1,\n",
-        "    description='Número:',\n",
-        "    style={'description_width': 'initial'}\n",
-        ")\n",
-        "\n",
-        "output = widgets.HTML()\n",
-        "input_number.observe(on_value_change, names='value')\n",
-        "\n",
-        "print(\"🔢 Use o controle deslizante abaixo para converter números:\")\n",
-        "display(input_number, output)\n",
-        "\n",
+        "slider = widgets.IntSlider(value=1, min=1, max=3999, description='Número:')\n",
+        "widgets.interact(mostrar_romano, n=slider)\n",
         "\n"
       ]
     }
