--- a/RomanNumeralsKata.ipynb
+++ b/RomanNumeralsKata.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYmUIXnEKJCDkaJRHy736i",
+      "authorship_tag": "ABX9TyN3A1SbhM4JR4R+Oy8Crhaa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,259 +13,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "8b64adf2087147c99916593ef6717daf": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "VBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [
-              "widget-interact"
-            ],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "VBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "VBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_29d2e90603f1473e896e75cdc449518e",
-              "IPY_MODEL_23eaa7873bc242c59267965dfd06e643"
-            ],
-            "layout": "IPY_MODEL_cb4cb275d2be433f8f6168e9e3550c70"
-          }
-        },
-        "29d2e90603f1473e896e75cdc449518e": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "IntSliderModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "IntSliderModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "IntSliderView",
-            "continuous_update": true,
-            "description": "Número:",
-            "description_tooltip": null,
-            "disabled": false,
-            "layout": "IPY_MODEL_8844d98a5dcb4be98179e8ea5d237681",
-            "max": 3999,
-            "min": 1,
-            "orientation": "horizontal",
-            "readout": true,
-            "readout_format": "d",
-            "step": 1,
-            "style": "IPY_MODEL_56c3da7e2a3b413faa45fbe07a1e5c9d",
-            "value": 1
-          }
-        },
-        "23eaa7873bc242c59267965dfd06e643": {
-          "model_module": "@jupyter-widgets/output",
-          "model_name": "OutputModel",
-          "model_module_version": "1.0.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/output",
-            "_model_module_version": "1.0.0",
-            "_model_name": "OutputModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/output",
-            "_view_module_version": "1.0.0",
-            "_view_name": "OutputView",
-            "layout": "IPY_MODEL_48b21321e1d44c13a6372ade24b77ffa",
-            "msg_id": "",
-            "outputs": [
-              {
-                "output_type": "stream",
-                "name": "stdout",
-                "text": [
-                  "1 → I\n"
-                ]
-              }
-            ]
-          }
-        },
-        "cb4cb275d2be433f8f6168e9e3550c70": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "8844d98a5dcb4be98179e8ea5d237681": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "56c3da7e2a3b413faa45fbe07a1e5c9d": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "SliderStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "SliderStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": "",
-            "handle_color": null
-          }
-        },
-        "48b21321e1d44c13a6372ade24b77ffa": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        }
-      }
     }
   },
   "cells": [
@@ -281,23 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 258,
-          "referenced_widgets": [
-            "8b64adf2087147c99916593ef6717daf",
-            "29d2e90603f1473e896e75cdc449518e",
-            "23eaa7873bc242c59267965dfd06e643",
-            "cb4cb275d2be433f8f6168e9e3550c70",
-            "8844d98a5dcb4be98179e8ea5d237681",
-            "56c3da7e2a3b413faa45fbe07a1e5c9d",
-            "48b21321e1d44c13a6372ade24b77ffa"
-          ]
+          "base_uri": "https://localhost:8080/"
         },
         "id": "KVRPg986o_gX",
-        "outputId": "99ba71d7-f030-437c-fb37-04f50d8e0172"
+        "outputId": "e05577c9-98d2-42b2-815f-4f624d5f0ebe"
       },
       "outputs": [
         {
@@ -306,7 +43,7 @@
           "text": [
             "..\n",
             "----------------------------------------------------------------------\n",
-            "Ran 2 tests in 0.001s\n",
+            "Ran 2 tests in 0.002s\n",
             "\n",
             "OK\n"
           ]
@@ -315,54 +52,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Rodando testes...\n"
+            "✅ Rodando testes...\n",
+            "\n",
+            "Digite um número entre 1 e 3999 para converter em algarismo romano: 5\n",
+            "5 → V\n"
           ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "interactive(children=(IntSlider(value=1, description='Número:', max=3999, min=1), Output()), _dom_classes=('wi…"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "8b64adf2087147c99916593ef6717daf"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<function __main__.mostrar_romano(n)>"
-            ],
-            "text/html": [
-              "<div style=\"max-width:800px; border: 1px solid var(--colab-border-color);\"><style>\n",
-              "      pre.function-repr-contents {\n",
-              "        overflow-x: auto;\n",
-              "        padding: 8px 12px;\n",
-              "        max-height: 500px;\n",
-              "      }\n",
-              "\n",
-              "      pre.function-repr-contents.function-repr-contents-collapsed {\n",
-              "        cursor: pointer;\n",
-              "        max-height: 100px;\n",
-              "      }\n",
-              "    </style>\n",
-              "    <pre style=\"white-space: initial; background:\n",
-              "         var(--colab-secondary-surface-color); padding: 8px 12px;\n",
-              "         border-bottom: 1px solid var(--colab-border-color);\"><b>mostrar_romano</b><br/>def mostrar_romano(n)</pre><pre class=\"function-repr-contents function-repr-contents-collapsed\" style=\"\"><a class=\"filepath\" style=\"display:none\" href=\"#\">/content/&lt;ipython-input-9-1764891338&gt;</a>&lt;no docstring&gt;</pre></div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
         }
       ],
       "source": [
-        "!pip install ipywidgets --quiet\n",
-        "\n",
         "def convert(n):\n",
         "    mapa = [\n",
         "        (1000, \"M\"), (900, \"CM\"), (500, \"D\"), (400, \"CD\"),\n",
@@ -375,6 +72,7 @@
         "        n %= val\n",
         "    return res\n",
         "\n",
+        "# Testes (TDD)\n",
         "import unittest\n",
         "\n",
         "class TesteRomanos(unittest.TestCase):\n",
@@ -394,22 +92,19 @@
         "        self.assertEqual(convert(1000), \"M\")\n",
         "        self.assertEqual(convert(3999), \"MMMCMXCIX\")\n",
         "\n",
-        "# Rodar testes\n",
+        "# Rodar os testes\n",
         "print(\"✅ Rodando testes...\")\n",
         "unittest.TextTestRunner().run(unittest.defaultTestLoader.loadTestsFromTestCase(TesteRomanos))\n",
         "\n",
-        "# Interface interativa\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display\n",
-        "\n",
-        "def mostrar_romano(n):\n",
-        "    if 1 <= n <= 3999:\n",
-        "        print(f\"{n} → {convert(n)}\")\n",
+        "# Entrada manual do usuário\n",
+        "try:\n",
+        "    num = int(input(\"\\nDigite um número entre 1 e 3999 para converter em algarismo romano: \"))\n",
+        "    if 1 <= num <= 3999:\n",
+        "        print(f\"{num} → {convert(num)}\")\n",
         "    else:\n",
-        "        print(\"Número fora do intervalo (1–3999)\")\n",
-        "\n",
-        "slider = widgets.IntSlider(value=1, min=1, max=3999, description='Número:')\n",
-        "widgets.interact(mostrar_romano, n=slider)\n",
+        "        print(\"❌ Número fora do intervalo permitido (1–3999).\")\n",
+        "except ValueError:\n",
+        "    print(\"❌ Entrada inválida. Digite um número inteiro.\")\n",
         "\n"
       ]
     }
